# pico_reco

./: CMakeLists.txt  README.md  pico_reco.py  test_reco
config/: picovoice.key
include/: jhcPicoReco.h
src/: jhcPicoReco.cpp  pico_reco.cpp  test_reco.cpp
